Add SecurityManager.
- Remove unused CPP file.