@@ -4,5 +4,5 @@ Archura Platform.
 Add the following VM parameter to enable sandboxing.
 
 ```
---enable-preview --add-exports java.base/jdk.internal.reflect=ALL-UNNAMED
+-Djava.security.manager=io.archura.platform.internal.security.ThreadSecurityManager --enable-preview --add-exports java.base/jdk.internal.reflect=ALL-UNNAMED --add-opens java.base/java.security=ALL-UNNAMED  --add-opens java.base/java.lang=ALL-UNNAMED  
 ```
